src/test/ui/issues/issue-1962.stderr
error: denote infinite loops with `loop { ... }`
  --> $DIR/issue-1962.rs:14:3
   |
LL |   while true  { //~ ERROR denote infinite loops with `loop
   |   ^^^^^^^^^^ help: use `loop`
   |
   = note: requested on the command line with `-D while-true`

error: aborting due to previous error

